syntax="proto3";

package grpc.postLike.v1;

import "common.proto";

message LikePostRequest {
    int64 userId = 1;
    int64 postId = 2;
}

message UnlikePostRequest {
    int64 userId = 1;
    int64 postId = 2;
}

service PostLike{
    rpc Like(LikePostRequest) returns (common.EmptyResponse){}
    rpc Unlike(UnlikePostRequest) returns (common.EmptyResponse){}
}