syntax="proto3";

message CreateUserRequest {
    string username = 1;
    string emailAddress = 2;
    string password = 3;
    string confirmPassword = 4;
}

message EmptyResponse {}

service UserService{
    rpc createUser(CreateUserRequest) returns (EmptyResponse){}
}